# PyWorkout

./: .deepsource.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  PLANNING.md  README.md  READMEold.md  SECURITY.md  Workout-gui.py  Workout.py  __init__.py  __main__.py  docker-compose.yml  gui.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/agents/: api-agent.md  docs-agent.md  lint-agent.md  test-agent.md
.github/workflows/: build.yml  codeql-analysis.yml  dependency-review.yml  docker-publish.yml  push-to-pypi.yml  pyinstaller-windows.yml  pytest.yml  python-app.yml  tests.yml
docs/: COMMANDS.md  CUSTOMIZATION.md  README.md  USAGE.md
docs/legal/: CLA_ENTITY.md  CLA_INDIVIDUAL.md  EULA.md  PRIVACY.md  TERMS.md
tests/: README.md  test_gui.py  test_main.py
