[metadata]
name = pyworkout
version = 1.2.0

[options.entry_points]
console_scripts =
    pyworkout = main:workout

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --strict-markers
    --tb=short
    --cov=.
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --cov-branch
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests